# CineSage_Info_Extractor_GEN_AI

./: .dockerignore  README.md  dockerfile  main.py  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json  package.json  style.css  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/hooks/: use-auto-resize-textarea.js
frontend/src/components/ui/: ai-input.jsx  shining-text.jsx  textarea.jsx
scripts/: build_frontend.py
