[project]
name = "movie-info-extractor-gen-ai"
version = "0.1.0"
description = "FastAPI backend for extracting structured movie information using Google Gemini"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.0",
    "uvicorn>=0.49.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = false
